modules/ec2/security_group.tf
# EC2 보안 그룹 (SG)
resource "aws_security_group" "ec2_sg" {
  name        = "ec2-sg"
  description = "Security group for EC2 instances"
  vpc_id      = var.vpc_id

  # HTTPS (443) 허용 - ALB 연결
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # SSH (22) - VPN 보안 그룹에서만 허용
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # 추후 VPN 도입 시 해당 VPN만 허용하기
  }

  # ALB (8080)에서 들어오는 트래픽 허용
  #   ingress {
  #     from_port       = 8080
  #     to_port         = 8080
  #     protocol        = "tcp"
  #     security_groups = [var.alb_sg_id]
  #   }

  # 모든 아웃바운드 트래픽 허용
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.common_tags, { Name = "ec2-sg" })
}
